--- a/Discorra/Discorra/Window Controllers/Base.lproj/MainWindowController.xib
+++ b/Discorra/Discorra/Window Controllers/Base.lproj/MainWindowController.xib
@@ -68,6 +68,7 @@
 							<array class="NSMutableArray" key="NSSubviews"/>
 							<string key="NSFrame">{{5, 3}, {25, 25}}</string>
 							<reference key="NSSuperview" ref="714029937"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="290258952"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -101,6 +102,7 @@
 							<array class="NSMutableArray" key="NSSubviews"/>
 							<string key="NSFrame">{{38, 3}, {25, 25}}</string>
 							<reference key="NSSuperview" ref="714029937"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="111703474"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -130,6 +132,7 @@
 							<array class="NSMutableArray" key="NSSubviews"/>
 							<string key="NSFrame">{{733, 3}, {71, 25}}</string>
 							<reference key="NSSuperview" ref="714029937"/>
+							<reference key="NSWindow"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="207454101">
@@ -153,6 +156,7 @@
 							<int key="NSvFlags">293</int>
 							<string key="NSFrame">{{345, 8}, {121, 17}}</string>
 							<reference key="NSSuperview" ref="714029937"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="291691964"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -189,6 +193,7 @@
 							<int key="NSvFlags">293</int>
 							<string key="NSFrame">{{292, 6}, {226, 20}}</string>
 							<reference key="NSSuperview" ref="714029937"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="248735598"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<string key="NSHuggingPriority">{250, 250}</string>
@@ -213,6 +218,7 @@
 													<array class="NSMutableArray" key="NSSubviews"/>
 													<string key="NSFrameSize">{382, 338}</string>
 													<reference key="NSSuperview" ref="54222572"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="626801563"/>
 													<string key="NSReuseIdentifierKey">_NS:13</string>
 													<bool key="NSEnabled">YES</bool>
@@ -311,6 +317,7 @@
 											</array>
 											<string key="NSFrameSize">{382, 338}</string>
 											<reference key="NSSuperview" ref="1012084236"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="532318968"/>
 											<string key="NSReuseIdentifierKey">_NS:11</string>
 											<reference key="NSDocView" ref="532318968"/>
@@ -322,6 +329,7 @@
 											<int key="NSvFlags">-2147483392</int>
 											<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 											<reference key="NSSuperview" ref="1012084236"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="536735616"/>
 											<string key="NSReuseIdentifierKey">_NS:58</string>
 											<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -334,6 +342,7 @@
 											<int key="NSvFlags">-2147483392</int>
 											<string key="NSFrame">{{0, 322}, {506, 16}}</string>
 											<reference key="NSSuperview" ref="1012084236"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="353973570"/>
 											<string key="NSReuseIdentifierKey">_NS:60</string>
 											<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -345,6 +354,7 @@
 									</array>
 									<string key="NSFrameSize">{382, 338}</string>
 									<reference key="NSSuperview" ref="725181389"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="54222572"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
 									<int key="NSsFlags">150064</int>
@@ -382,6 +392,7 @@
 											</set>
 											<string key="NSFrameSize">{427, 338}</string>
 											<reference key="NSSuperview" ref="353973570"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView"/>
 											<string key="NSReuseIdentifierKey">_NS:9</string>
 											<string key="FrameName"/>
@@ -403,6 +414,7 @@
 											<int key="NSvFlags">301</int>
 											<string key="NSFrame">{{17, 143}, {393, 59}}</string>
 											<reference key="NSSuperview" ref="353973570"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="570039552"/>
 											<string key="NSReuseIdentifierKey">_NS:1535</string>
 											<bool key="NSEnabled">YES</bool>
@@ -428,6 +440,7 @@
 									</array>
 									<string key="NSFrame">{{383, 0}, {427, 338}}</string>
 									<reference key="NSSuperview" ref="725181389"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="300891379"/>
 									<string key="NSReuseIdentifierKey">_NS:13</string>
 									<string key="NSClassName">NSView</string>
@@ -435,6 +448,7 @@
 							</array>
 							<string key="NSFrame">{{0, 32}, {810, 338}}</string>
 							<reference key="NSSuperview" ref="714029937"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1012084236"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSIsVertical">YES</bool>
@@ -443,6 +457,7 @@
 					</array>
 					<string key="NSFrameSize">{810, 370}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="725181389"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1058}}</string>
@@ -492,7 +507,7 @@
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="333597229">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSTextField" id="144728531">
@@ -664,7 +679,6 @@
 						</object>
 					</array>
 					<string key="NSFrameSize">{499, 185}</string>
-					<reference key="NSSuperview"/>
 					<reference key="NSNextKeyView" ref="111060989"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
@@ -1443,9 +1457,191 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">272</int>
+			<int key="maxID">274</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ArticleSummaryTableCellView</string>
+					<string key="superclassName">NSTableCellView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="date">NSTextField</string>
+						<string key="summary">NSTextField</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="date">
+							<string key="name">date</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="summary">
+							<string key="name">summary</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ArticleSummaryTableCellView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MainWindowController</string>
+					<string key="superclassName">NSWindowController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="addArticle:">id</string>
+						<string key="build:">id</string>
+						<string key="deleteMenuPressed:">id</string>
+						<string key="editMenuPressed:">id</string>
+						<string key="globalArticleDelete:">id</string>
+						<string key="globalArticleEdit:">id</string>
+						<string key="globalArticleNew:">id</string>
+						<string key="globalBlogBuild:">id</string>
+						<string key="globalBlogRefresh:">id</string>
+						<string key="refresh:">id</string>
+						<string key="refreshButtonPressed:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="addArticle:">
+							<string key="name">addArticle:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="build:">
+							<string key="name">build:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="deleteMenuPressed:">
+							<string key="name">deleteMenuPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="editMenuPressed:">
+							<string key="name">editMenuPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="globalArticleDelete:">
+							<string key="name">globalArticleDelete:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="globalArticleEdit:">
+							<string key="name">globalArticleEdit:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="globalArticleNew:">
+							<string key="name">globalArticleNew:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="globalBlogBuild:">
+							<string key="name">globalBlogBuild:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="globalBlogRefresh:">
+							<string key="name">globalBlogRefresh:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="refresh:">
+							<string key="name">refresh:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="refreshButtonPressed:">
+							<string key="name">refreshButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="buildButton">NSButton</string>
+						<string key="createArticleWindow">MainWindowNewArticlePanel</string>
+						<string key="inderterminateProgress">NSProgressIndicator</string>
+						<string key="previewText">NSTextField</string>
+						<string key="statusbarText">NSTextField</string>
+						<string key="tableView">NSTableView</string>
+						<string key="webView">WebView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="buildButton">
+							<string key="name">buildButton</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="createArticleWindow">
+							<string key="name">createArticleWindow</string>
+							<string key="candidateClassName">MainWindowNewArticlePanel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="inderterminateProgress">
+							<string key="name">inderterminateProgress</string>
+							<string key="candidateClassName">NSProgressIndicator</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="previewText">
+							<string key="name">previewText</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="statusbarText">
+							<string key="name">statusbarText</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="tableView">
+							<string key="name">tableView</string>
+							<string key="candidateClassName">NSTableView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="webView">
+							<string key="name">webView</string>
+							<string key="candidateClassName">WebView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MainWindowController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MainWindowNewArticlePanel</string>
+					<string key="superclassName">NSWindow</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="cancelButtonPressed:">id</string>
+						<string key="createButtonPressed:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="cancelButtonPressed:">
+							<string key="name">cancelButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="createButtonPressed:">
+							<string key="name">createButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="articleFilename">NSTextField</string>
+						<string key="articleName">NSTextField</string>
+						<string key="createButton">NSButton</string>
+						<string key="mainWindowController">MainWindowController</string>
+						<string key="openAfterCreation">NSButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="articleFilename">
+							<string key="name">articleFilename</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="articleName">
+							<string key="name">articleName</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="createButton">
+							<string key="name">createButton</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mainWindowController">
+							<string key="name">mainWindowController</string>
+							<string key="candidateClassName">MainWindowController</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="openAfterCreation">
+							<string key="name">openAfterCreation</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MainWindowNewArticlePanel.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
